turtleart.polygon20.Polygon20.scala.error
Compilation error:
Polygon20:3: error: type mismatch;
 found   : Double(51.42857142857143)
 required: Int
  angle=360.0/7.0
             ^